# deja

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md  plan.md
src/deja/: chunker.py  cli.py  config.py  db.py  eval.py  indexer.py  parser.py  search.py  secrets.py  server.py
tests/: test_chunker.py  test_cli.py  test_db.py  test_indexer.py  test_integration.py  test_parser.py  test_search.py  test_secrets.py  test_server.py
