[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deja"
version = "0.1.0"
description = "Semantic search MCP server for Claude Code sessions"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Oleg Usoltsev" },
]
keywords = ["claude-code", "mcp", "semantic-search", "embeddings", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastembed>=0.6.0,<1.0",
    "sqlite-vec==0.1.8",
    "fastmcp>=3.0.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/CynepMyx/deja"
Issues = "https://github.com/CynepMyx/deja/issues"

[project.scripts]
deja = "deja.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deja"]

[tool.pytest.ini_options]
testpaths = ["tests"]
